Commit by Nodir.Add counter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,18 @@ server.port=8150
 spring.application.name=aziza-shahzadayevna-bot
 bot.token=7290153317:AAG2myo-YcQ3nEcIIIEHNpTRgMJba7SZ-Pw
 bot.username=t.me/apply_notifier_bot
+group.chatId=-1002194548453
+
+spring.datasource.username=postgres
+spring.datasource.password=-098
+spring.datasource.url=jdbc:postgresql://localhost:5432/ash_bot
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#LocalDateTime bilan ishlash uchun
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
