Commit by Nodir.Bot changed in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8150
 spring.application.name=aziza-shahzadayevna-bot
-#bot.token=7290153317:AAG2myo-YcQ3nEcIIIEHNpTRgMJba7SZ-Pw
-#bot.username=t.me/apply_notifier_bot
-#group.chatId=-1002194548453
+bot.token=7290153317:AAG2myo-YcQ3nEcIIIEHNpTRgMJba7SZ-Pw
+bot.username=t.me/apply_notifier_bot
+group.chatId=-1002194548453
 
-bot.token=7445432913:AAFnOI-C3jMLvbEaP9TrtX0ZLGfLvhUNmnc
-bot.username=t.me/result_guide_bot
-group.chatId=-1001690301275
+#bot.token=7445432913:AAFnOI-C3jMLvbEaP9TrtX0ZLGfLvhUNmnc
+#bot.username=t.me/result_guide_bot
+#group.chatId=-1001690301275
 
 
 spring.datasource.username=postgres
