change ChatId of group. Men uchun notification qo'shildi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,14 @@ spring.application.name=aziza-shahzadayevna-bot
 bot.token=7290153317:AAG2myo-YcQ3nEcIIIEHNpTRgMJba7SZ-Pw
 bot.username=t.me/apply_notifier_bot
 group.chatId=-1002226783290
+check.group.chatId=5269233777
+
 
 spring.datasource.username=postgres
 spring.datasource.password=-098
 spring.datasource.url=jdbc:postgresql://localhost:5432/ash_bot
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #LocalDateTime bilan ishlash uchun
